--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
   </head>
 
   <body>
+    <div class="page">
     <header class="topbar">
       <div class="topbar__inner">
         <div class="brand">Simona Mertlíková</div>
@@ -210,7 +211,7 @@
     </section>
     <!-- ===== Jak přemýšlím nad designem ===== -->
     <section class="process">
-      <div class="process__inner">
+      <div class="container section-wrap process__inner">
         <h2 class="process__title">Jak přemýšlím nad designem</h2>
 
         <div class="process__grid">
@@ -297,6 +298,7 @@
           >
 
           <a class="footer__link" href="tel:+420722657280">+420 722 657 280</a>
+        </div>
         </div>
       </div>
     </footer>
