--- a/index.html
+++ b/index.html
@@ -5,11 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Simona Mertlíková</title>
 
-    <!-- Fonty (Google Fonts) -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 
-    <!-- Space Grotesk (nadpisy) + Plus Jakarta Sans (ostatní) -->
     <link
       href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300;400;500&family=Plus+Jakarta+Sans:wght@300;400;500&display=swap"
       rel="stylesheet"
@@ -21,286 +19,285 @@
 
   <body>
     <div class="page">
-    <header class="topbar">
-      <div class="topbar__inner">
-        <div class="brand">Simona Mertlíková</div>
+      <header class="topbar">
+        <div class="topbar__inner">
+          <div class="brand">Simona Mertlíková</div>
 
-        <nav class="nav">
-          <a class="nav__link" href="#about">O mně</a>
-          <a class="nav__link" href="#contact">Kontakt</a>
-          <a class="nav__link" href="#projekty">Projekty</a>
-        </nav>
-      </div>
-    </header>
+          <nav class="nav">
+            <a class="nav__link" href="#about">O mně</a>
+            <a class="nav__link" href="#contact">Kontakt</a>
+            <a class="nav__link" href="#projekty">Projekty</a>
+          </nav>
+        </div>
+      </header>
 
-    <main>
-      <section class="hero" aria-label="Úvod">
-        <div class="hero__bg" aria-hidden="true"></div>
+      <main>
+        <section class="hero" aria-label="Úvod">
+          <div class="hero__bg" aria-hidden="true"></div>
 
-        <div class="hero__content">
-          <h1 class="hero__title">
-            UX/UI designer a SEO<br />
-            specialista
-          </h1>
+          <div class="hero__content">
+            <h1 class="hero__title">
+              UX/UI designer a SEO<br />
+              specialista
+            </h1>
 
-          <p class="hero__subtitle">
-            Navrhuji řešení, které spojuje<br />
-            funkčnost a výkon.
+            <p class="hero__subtitle">
+              Navrhuji řešení, které spojuje<br />
+              funkčnost a výkon.
+            </p>
+          </div>
+        </section>
+      </main>
+
+      <section class="what" id="sluzby">
+        <div class="what__inner">
+          <h2 class="what__title">Co přesně dělám?</h2>
+
+          <div class="what__grid">
+            <article class="whatcard">
+              <h3 class="whatcard__title">SEO</h3>
+              <p class="whatcard__text">
+                Analyzuji data, vyhledávací záměr i konkurenci.
+              </p>
+            </article>
+
+            <article class="whatcard">
+              <h3 class="whatcard__title">UX/UI</h3>
+              <p class="whatcard__text">
+                Navrhuji strukturu, uživatelské flow a rozhraní, která dávají
+                smysl lidem i byznysu.
+              </p>
+            </article>
+
+            <article class="whatcard">
+              <h3 class="whatcard__title">Synergie</h3>
+              <p class="whatcard__text">
+                Spojuji analytické myšlení s citem pro design.
+              </p>
+            </article>
+          </div>
+        </div>
+      </section>
+
+      <section id="projekty" class="projects">
+        <div class="container">
+          <h2 class="section-title">Projekty</h2>
+
+          <div class="carousel" aria-label="Carousel projektů">
+            <button
+              class="carousel__arrow carousel__arrow--left"
+              type="button"
+              aria-label="Předchozí projekt"
+            >
+              <img src="sipka_leva.avif" alt="" />
+            </button>
+
+            <div class="carousel__viewport">
+              <article class="carousel__slide is-active">
+                <div class="project-card">
+                  <div class="project-card__media">
+                    <img
+                      class="project-card__shot"
+                      src="innogy_radce_2.avif"
+                      alt="Ukázka projektu – innogy Energetický rádce"
+                    />
+                  </div>
+
+                  <div class="project-card__text">
+                    <h3 class="project-card__title">
+                      innogy — Energetický rádce
+                    </h3>
+
+                    <p>
+                      Cílem projektu bylo vhodně umístit energetického rádce na
+                      web Innogy a propojit ho se slovníkem pojmů tak, aby byl
+                      pro uživatele snadno dohledatelný a srozumitelný.
+                    </p>
+
+                    <p>
+                      Vzhledem k omezeným možnostem práce s designem v
+                      administračním systému jsem navrhla řešení založené na
+                      propojení slovníku a rádce formou překlikávání.
+                    </p>
+
+                    <p>Projekt kombinoval UX/UI návrh se SEO.</p>
+
+                    <div class="project-card__tags">UX. UI. SEO</div>
+                  </div>
+                </div>
+              </article>
+
+              <article class="carousel__slide">
+                <div class="project-card">
+                  <div class="project-card__media">
+                    <img
+                      class="project-card__shot"
+                      src="innogy_plyn_2.avif"
+                      alt="Ukázka projektu – innogy Stránka Plyn"
+                    />
+                  </div>
+
+                  <div class="project-card__text">
+                    <h3 class="project-card__title">innogy — Stránka Plyn</h3>
+
+                    <p>
+                      Zde jsem se zaměřila na kompletní restrukturalizaci obsahu
+                      a modernější pojetí stránky.
+                    </p>
+
+                    <p>
+                      Vycházela jsem z toho, jaké informace lidé o této službě
+                      skutečně hledají, a podle toho jsem poskládala obsah i
+                      výzvy k akci tak, aby dávaly smysl uživatelům i byznysovým
+                      cílům.
+                    </p>
+
+                    <p>
+                      Projekt zahrnoval UX/UI návrh i SEO optimalizaci, přičemž
+                      návrh respektoval výrazná omezení designového prostředí
+                      klienta.
+                    </p>
+
+                    <div class="project-card__tags">UX. UI. SEO</div>
+                  </div>
+                </div>
+              </article>
+
+              <article class="carousel__slide">
+                <div class="project-card">
+                  <div class="project-card__media">
+                    <img
+                      class="project-card__shot"
+                      src="olivie_blog_2.avif"
+                      alt="Ukázka projektu – Olivie blog"
+                    />
+                  </div>
+
+                  <div class="project-card__text">
+                    <h3 class="project-card__title">
+                      Olivie — Blog &amp; obsahová struktura
+                    </h3>
+
+                    <p>
+                      Články pro blog Olivie jsem navrhovala tak, aby vizuálně i
+                      strukturou zapadaly do celého webu, nejen do samostatné
+                      blogové sekce.
+                    </p>
+
+                    <p>
+                      Hlavní důraz byl kladen na SEO, zároveň jsme ale
+                      zasahovali i do struktury obsahu tak, aby články
+                      podporovaly orientaci uživatelů a celkovou logiku webu.
+                    </p>
+
+                    <div class="project-card__tags">UX. SEO</div>
+                  </div>
+                </div>
+              </article>
+            </div>
+
+            <button
+              class="carousel__arrow carousel__arrow--right"
+              type="button"
+              aria-label="Další projekt"
+            >
+              <img src="sipka_prava.avif" alt="" />
+            </button>
+          </div>
+        </div>
+      </section>
+
+      <section class="process">
+        <div class="container section-wrap process__inner">
+          <h2 class="process__title">Jak přemýšlím nad designem</h2>
+
+          <div class="process__grid">
+            <div class="process__item">
+              <span class="process__number">01</span>
+              <h3>Analýza</h3>
+              <p>Data, SEO, cíle</p>
+            </div>
+
+            <div class="process__item">
+              <span class="process__number">02</span>
+              <h3>UX</h3>
+              <p>Struktura, flow</p>
+            </div>
+
+            <div class="process__item">
+              <span class="process__number">03</span>
+              <h3>Vizuál</h3>
+              <p>Systém a detail</p>
+            </div>
+
+            <div class="process__item">
+              <span class="process__number">04</span>
+              <h3>Optimalizace</h3>
+              <p>Testování a výkon</p>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="about" id="about">
+        <div class="container">
+          <div class="about__grid">
+            <div class="about__text">
+              <h2 class="section-h2">O mně</h2>
+
+              <p>
+                Jsem UX/UI designérka s pěti lety zkušeností v SEO. Navrhuji
+                weby, které propojují estetiku s výkonem.
+              </p>
+
+              <p>
+                K digitálu jsem se dostala přes psaní obsahu. Kolem roku 2017
+                jsem začala psát články na volné noze a postupně jsem se dostala
+                k SEO.
+              </p>
+
+              <p>
+                Práce s obsahem a daty mě přirozeně přivedla k otázkám
+                struktury, použitelnosti a toho, jak se lidé na webu skutečně
+                chovají.
+              </p>
+            </div>
+
+            <div class="about__photo">
+              <img src="SM.avif" alt="Simona Mertlíková" />
+            </div>
+          </div>
+
+          <p class="cta-line">
+            Máte projekt, který potřebuje promyšlený design a funkční obsah?
+            Ozvěte se.
           </p>
         </div>
       </section>
-    </main>
-    <section class="what" id="sluzby">
-      <div class="what__inner">
-        <h2 class="what__title">Co přesně dělám?</h2>
 
-        <div class="what__grid">
-          <article class="whatcard">
-            <h3 class="whatcard__title">SEO</h3>
-            <p class="whatcard__text">
-              Analyzuji data, vyhledávací záměr i konkurenci.
-            </p>
-          </article>
+      <footer class="footer" id="contact">
+        <div class="container">
+          <h2 class="footer__title">Kontakty</h2>
 
-          <article class="whatcard">
-            <h3 class="whatcard__title">UX/UI</h3>
-            <p class="whatcard__text">
-              Navrhuji strukturu, uživatelské flow a rozhraní, která dávají
-              smysl lidem i byznysu.
-            </p>
-          </article>
+          <div class="footer__list">
+            <a class="footer__link" href="mailto:simona.mertlikova@gmail.com"
+              >simona.mertlikova@gmail.com</a
+            >
 
-          <article class="whatcard">
-            <h3 class="whatcard__title">Synergie</h3>
-            <p class="whatcard__text">
-              Spojuji analytické myšlení s citem pro design.
-            </p>
-          </article>
-        </div>
-      </div>
-    </section>
-    <section id="projekty" class="projects">
-      <div class="container">
-        <h2 class="section-title">Projekty</h2>
+            <a
+              class="footer__link"
+              href="https://www.linkedin.com/in/simona-mertlíková-b151b5189/"
+              target="_blank"
+              rel="noopener"
+              >LinkedIn</a
+            >
 
-        <div class="carousel" aria-label="Carousel projektů">
-          <!-- Šipky jsou mimo "card" zarovnání -->
-          <button
-            class="carousel__arrow carousel__arrow--left"
-            type="button"
-            aria-label="Předchozí projekt"
-          >
-            <img src="sipka_leva.avif" alt="" />
-          </button>
-
-          <div class="carousel__viewport">
-            <!-- Slide 1 -->
-            <article class="carousel__slide is-active">
-              <div class="project-card">
-                <div class="project-card__media project-card__media--radce">
-                  <img
-                    class="project-card__shot"
-                    src="innogy_radce_2.avif"
-                    alt="Ukázka projektu – innogy Energetický rádce"
-                  />
-                </div>
-
-                <div class="project-card__text">
-                  <h3 class="project-card__title">
-                    innogy — Energetický rádce
-                  </h3>
-
-                  <p>
-                    Cílem projektu bylo vhodně umístit energetického rádce na
-                    web Innogy a propojit ho se slovníkem pojmů tak, aby byl pro
-                    uživatele snadno dohledatelný a srozumitelný.
-                  </p>
-
-                  <p>
-                    Vzhledem k omezeným možnostem práce s designem v
-                    administračním systému jsem navrhla řešení založené na
-                    propojení slovníku a rádce formou překlikávání.
-                  </p>
-
-                  <p>Projekt kombinoval UX/UI návrh se SEO.</p>
-
-                  <div class="project-card__tags">UX. UI. SEO</div>
-                </div>
-              </div>
-            </article>
-
-            <!-- Slide 2 -->
-            <article class="carousel__slide">
-              <div class="project-card">
-                <div class="project-card__media project-card__media--plyn">
-                  <img
-                    class="project-card__shot"
-                    src="innogy_plyn_2.avif"
-                    alt="Ukázka projektu – innogy Stránka Plyn"
-                  />
-                </div>
-
-                <div class="project-card__text">
-                  <h3 class="project-card__title">innogy — Stránka Plyn</h3>
-
-                  <p>
-                    Zde jsem se zaměřila na kompletní restrukturalizaci obsahu a
-                    modernější pojetí stránky.
-                  </p>
-
-                  <p>
-                    Vycházela jsem z toho, jaké informace lidé o této službě
-                    skutečně hledají, a podle toho jsem poskládala obsah i výzvy
-                    k akci tak, aby dávaly smysl uživatelům i byznysovým cílům.
-                  </p>
-
-                  <p>
-                    Projekt zahrnoval UX/UI návrh i SEO optimalizaci, přičemž
-                    návrh respektoval výrazná omezení designového prostředí
-                    klienta.
-                  </p>
-
-                  <div class="project-card__tags">UX. UI. SEO</div>
-                </div>
-              </div>
-            </article>
-
-            <!-- Slide 3 -->
-            <article class="carousel__slide">
-              <div class="project-card">
-                <div class="project-card__media project-card__media--olivie">
-                  <img
-                    class="project-card__shot"
-                    src="olivie_blog_2.avif"
-                    alt="Ukázka projektu – Olivie blog"
-                  />
-                </div>
-
-                <div class="project-card__text">
-                  <h3 class="project-card__title">
-                    Olivie — Blog &amp; obsahová struktura
-                  </h3>
-
-                  <p>
-                    Články pro blog Olivie jsem navrhovala tak, aby vizuálně i
-                    strukturou zapadaly do celého webu, nejen do samostatné
-                    blogové sekce.
-                  </p>
-
-                  <p>
-                    Hlavní důraz byl kladen na SEO, zároveň jsme ale zasahovali
-                    i do struktury obsahu tak, aby články podporovaly orientaci
-                    uživatelů a celkovou logiku webu.
-                  </p>
-
-                  <div class="project-card__tags">UX. SEO</div>
-                </div>
-              </div>
-            </article>
-          </div>
-
-          <button
-            class="carousel__arrow carousel__arrow--right"
-            type="button"
-            aria-label="Další projekt"
-          >
-            <img src="sipka_prava.avif" alt="" />
-          </button>
-        </div>
-      </div>
-    </section>
-    <!-- ===== Jak přemýšlím nad designem ===== -->
-    <section class="process">
-      <div class="container section-wrap process__inner">
-        <h2 class="process__title">Jak přemýšlím nad designem</h2>
-
-        <div class="process__grid">
-          <div class="process__item">
-            <span class="process__number">01</span>
-            <h3>Analýza</h3>
-            <p>Data, SEO, cíle</p>
-          </div>
-
-          <div class="process__item">
-            <span class="process__number">02</span>
-            <h3>UX</h3>
-            <p>Struktura, flow</p>
-          </div>
-
-          <div class="process__item">
-            <span class="process__number">03</span>
-            <h3>Vizuál</h3>
-            <p>Systém a detail</p>
-          </div>
-
-          <div class="process__item">
-            <span class="process__number">04</span>
-            <h3>Optimalizace</h3>
-            <p>Testování a výkon</p>
+            <a class="footer__link" href="tel:+420722657280"
+              >+420 722 657 280</a
+            >
           </div>
         </div>
-      </div>
-    </section>
-
-    <!-- ===== O mně ===== -->
-    <section class="about" id="about">
-      <div class="container">
-        <div class="about__grid">
-          <div class="about__text">
-            <h2 class="section-h2">O mně</h2>
-
-            <p>
-              Jsem UX/UI designérka s pěti lety zkušeností v SEO. Navrhuji weby,
-              které propojují estetiku s výkonem.
-            </p>
-
-            <p>
-              K digitálu jsem se dostala přes psaní obsahu. Kolem roku 2017 jsem
-              začala psát články na volné noze a postupně jsem se dostala k SEO.
-            </p>
-
-            <p>
-              Práce s obsahem a daty mě přirozeně přivedla k otázkám struktury,
-              použitelnosti a toho, jak se lidé na webu skutečně chovají.
-            </p>
-          </div>
-
-          <div class="about__photo">
-            <!-- dej sem svůj soubor (např. "simona.jpg") -->
-            <img src="SM.avif" alt="Simona Mertlíková" />
-          </div>
-        </div>
-
-        <p class="cta-line">
-          Máte projekt, který potřebuje promyšlený design a funkční obsah?
-          Ozvěte se.
-        </p>
-      </div>
-    </section>
-
-    <!-- ===== Kontakty (patička) ===== -->
-    <footer class="footer" id="contact">
-      <div class="container">
-        <h2 class="footer__title">Kontakty</h2>
-
-        <div class="footer__list">
-          <a class="footer__link" href="mailto:simona.mertlikova@gmail.com"
-            >simona.mertlikova@gmail.com</a
-          >
-
-          <!-- sem vlož svůj LinkedIn odkaz -->
-          <a
-            class="footer__link"
-            href="https://www.linkedin.com/in/simona-mertlíková-b151b5189/"
-            target="_blank"
-            rel="noopener"
-            >LinkedIn</a
-          >
-
-          <a class="footer__link" href="tel:+420722657280">+420 722 657 280</a>
-        </div>
-        </div>
-      </div>
-    </footer>
+      </footer>
+    </div>
   </body>
 </html>
